@@ -1,3 +1,12 @@
+2009-02-05  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclStringObj.c (Tcl_AppendObjToObj): Special-case the
+	appending of one bytearray to another, which can be extremely rapid.
+	Part of scheme to address [Bug 1665628] by making the basic string
+	operations more efficient on byte arrays.
+	(Tcl_GetCharLength, Tcl_GetUniChar, Tcl_GetRange): More special casing
+	work for bytearrays.
+
 2009-02-04  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclStringObj.c: Added overflow protections to the
@@ -9,9 +18,9 @@
 
 2009-02-03  Jan Nijtmans  <nijtmans@users.sf.net>
 
-	* macosx/tclMacOSXFCmd.c - eliminate some unnessary type casts
-	* unix/tclLoadDyld.c     - some internal const decorations
-	* unix/tclUnixCompat.c   - spacing
+	* macosx/tclMacOSXFCmd.c: Eliminate some unnessary type casts
+	* unix/tclLoadDyld.c:	  some internal const decorations
+	* unix/tclUnixCompat.c:	  spacing
 	* unix/tclUnixFCmd.c
 	* unix/tclUnixFile.c
 	* win/tclWinDde.c
